--- a/src/components/FoodList/FoodList.css
+++ b/src/components/FoodList/FoodList.css
@@ -2,8 +2,12 @@
   background-color: var(--white);
   border: .1vmin solid var(--tan-3);
   border-radius: 2vmin;
-  margin: 3vmin 0;
-  padding: 3vmin;
+  margin-left: 3vmin;
+  margin-right: 3vmin;
+  padding: 2vmin;
   overflow-y: scroll;
-  width: 50vw;
+  overflow-x: scroll;
+  width: 45vw;
 }
+
+
