--- a/src/components/FoodDetail/FoodDetail.css
+++ b/src/components/FoodDetail/FoodDetail.css
@@ -18,7 +18,7 @@
   width: 100%;
 }
 
-.OrderDetail .total {
+.FoodDetail .total {
   width: 100%;
   display: grid;
   grid-template-columns: 18.35vw 5.75vw 5.25vw;
@@ -27,7 +27,7 @@
   border-top: .1vmin solid var(--tan-3);
 }
 
-.OrderDetail .total span {
+.FoodDetail .total span {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,12 +35,12 @@
   color: var(--text-dark);
 }
 
-.OrderDetail .total span.right {
+.FoodDetail .total span.right {
   display: flex;
   justify-content: flex-end;
 }
 
-.OrderDetail .hungry {
+.FoodDetail .hungry {
   position: absolute;
   top: 50vh;
   font-size: 2vmin;
