--- a/src/components/FoodList/FoodList.css
+++ b/src/components/FoodList/FoodList.css
@@ -1,6 +1,6 @@
 .FoodList {
   background-color: var(--white);
-  border: .1vmin solid var(--tan-3);
+  border: .1vmin solid var(--white);
   border-radius: 2vmin;
   margin-left: 3vmin;
   margin-right: 3vmin;
