--- a/src/components/LineItem/LineItem.css
+++ b/src/components/LineItem/LineItem.css
@@ -13,7 +13,7 @@
   border-bottom: .1vmin solid var(--tan-3);
 }
 
-.LineItem .qty {
+.LineItem .counter {
   display: flex;
   justify-content: space-between;
   align-items: center;
