--- a/src/components/FoodListItem/FoodListItem.css
+++ b/src/components/FoodListItem/FoodListItem.css
@@ -9,7 +9,7 @@
   padding: 2vmin;
   color: var(--text-light);
   background-color: var(--white);
-  border: .1vmin solid var(--tan-3);
+  /* border: .1vmin solid var(--tan-3); */
   border-radius: 1vmin;
   overflow-y: scroll;
   overflow-x: scroll;
