--- a/src/pages/FoodIntakePage/FoodIntakePage.css
+++ b/src/pages/FoodIntakePage/FoodIntakePage.css
@@ -6,6 +6,9 @@
   background-color: var(--white);
   border-radius: 2vmin;
   padding-top: 1vmin;
+  position: fixed;
+  overflow-y: scroll;
+  overflow-x: scroll;
 }
 
 .FoodIntakePage aside {
