--- a/src/pages/FoodIntakePage/FoodIntakePage.css
+++ b/src/pages/FoodIntakePage/FoodIntakePage.css
@@ -1,5 +1,5 @@
 .FoodIntakePage {
-  height: 100%;
+  /* height: 100%; */
   display: grid;
   grid-template-columns: 1.6fr 3.5fr 3fr;
   grid-template-rows: 1fr;
